--- a/about.qmd
+++ b/about.qmd
@@ -1,6 +1,6 @@
 ---
 title: "About"
-image: profile.jpg
+image: profile.png
 about:
   template: jolla
   links:
@@ -15,4 +15,4 @@ about:
       href: https://github.com/quantPsych
 ---
 
-About this blog
+"Data Wow" purports to be an engaging and insightful blog at the crossroads of data science, statistics, and technology. Authored by a passionate university professor with expertise in biostatistics, data science, psychometrics, and engineering, this blog delves deep into the world of data analytics and machine learning. Through a blend of casual and formal discourse, it offers a unique perspective on harnessing the power of data to uncover fascinating insights, solve real-world problems, and advocate for equal opportunity and fairness in higher education---a fun-read for data enthusiasts and advocates of data-driven decision-making.
